--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
 				  <!-- page-content has additional login-screen content -->
 				<img src="img/login.png" alt="">	
 				  <div class="page-content login-screen-content">
-					<img src="img/leaves.png" class="img-fluid position-left" width="18%" alt="">  
+					<img src="img/leaves.png" class="img-fluid position-left" alt="">  
 					<div class="login-screen-title">Welcome back!</div>
 					 <h3 class="text-align-center margin-text">Log in to your account</h3> 
 					<!-- Login form -->
