--- a/index.html
+++ b/index.html
@@ -325,9 +325,9 @@
 			  <div class="view">
 				<div class="page login-screen-page">
 				  <!-- page-content has additional login-screen content -->
-				<img src="img/login.png" alt="">	
+				<img src="img/login.png"  class="img-fluid" alt="">	
 				  <div class="page-content login-screen-content">
-					<img src="img/leaves.png" class="img-fluid position-left" alt="">  
+					<img src="img/leaves.png" class="img-fluid position-left" width="18%" alt="">  
 					<div class="login-screen-title">Welcome back!</div>
 					 <h3 class="text-align-center margin-text">Log in to your account</h3> 
 					<!-- Login form -->
